sidebar overlap fix

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -52,13 +52,13 @@
   }
 
   .category-inner-container {
-    width: 205px;
+    width: 215px;
     margin: auto;
     padding: 10px;
     border-radius: 5px;
 
     .category-icon {
-      width: 30px;
+      width: 25px;
       height: auto;
       margin-right: 5px;
       text-align: center;
